After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 728664 - ATK_STATE_SHOWING not updated for pages
ATK_STATE_SHOWING not updated for pages
Status: RESOLVED FIXED
Product: evince
Classification: Core
Component: general
3.11.x
Other Linux
: Normal normal
: ---
Assigned To: Evince Maintainers
Evince Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-04-21 16:28 UTC by Joanmarie Diggs (IRC: joanie)
Modified: 2014-04-25 05:46 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Add a range-changed signal and use it to update the "showing" state (3.56 KB, patch)
2014-04-21 16:28 UTC, Joanmarie Diggs (IRC: joanie)
needs-work Details | Review
proposed patch (2.80 KB, patch)
2014-04-22 12:24 UTC, Joanmarie Diggs (IRC: joanie)
committed Details | Review

Description Joanmarie Diggs (IRC: joanie) 2014-04-21 16:28:53 UTC
Created attachment 274815 [details] [review]
Add a range-changed signal and use it to update the "showing" state

The AtkObject for each page has its "showing" state set initially based on the displayed page(s), but the state is never updated when the displayed page(s) change.
Comment 1 Carlos Garcia Campos 2014-04-22 11:02:02 UTC
Review of attachment 274815 [details] [review]:

::: libview/ev-view.c
@@ +779,2 @@
 		ev_view_check_cursor_blink (view);
+		g_signal_emit (view, signals[SIGNAL_RANGE_CHANGED], 0, NULL);

Instead of adding a new signal to the API for a private object (EvViewAccessible) we could add a method in ev-view-accessible (set_page_range like ev_page_cache_set_page_range and ev_pixbuf_cache_set_page_range) and call it here.
Comment 2 Joanmarie Diggs (IRC: joanie) 2014-04-22 12:24:31 UTC
Created attachment 274884 [details] [review]
proposed patch

(In reply to comment #1)
 
> Instead of adding a new signal to the API for a private object
> (EvViewAccessible) we could add a method in ev-view-accessible (set_page_range
> like ev_page_cache_set_page_range and ev_pixbuf_cache_set_page_range) and call
> it here.

Done. Thanks for the review!
Comment 3 Carlos Garcia Campos 2014-04-23 16:28:43 UTC
Review of attachment 274884 [details] [review]:

This looks a lot simpler now, thanks!
Comment 4 Joanmarie Diggs (IRC: joanie) 2014-04-25 05:46:31 UTC
Comment on attachment 274884 [details] [review]
proposed patch

Thanks.

This was committed to both master and the gnome-3-12 branch. Please let me know if it should have only gone to master.