libview: Update ATK_STATE_SHOWING when the visible page range changes

https://bugzilla.gnome.org/show_bug.cgi?id=728664